--- a/USSCRadio/project_USSCRadio/project.config
+++ b/USSCRadio/project_USSCRadio/project.config
@@ -1,9 +1,8 @@
-<config platform="project" template="project (default)">Created: Thu Jun 5 09:48:10 2014
+<config template="project (default)" platform="project">Created: Thu Jun 5 09:48:10 2014
 By: Garret
 Using Template: project (default)
 
-&lt;description to go here>
-<option name="icon" fromDef="true" value=""/>
+&lt;description to go here><option name="icon" fromDef="true" value=""/>
     <option name="splashscreen" fromDef="true" value=""/>
     <option name="splashscreen-use-all" fromDef="true" value=""/>
     <option name="splashscreen-auto-onblack" fromDef="true" value=""/>
