--- a/USSCRadio/project_USSCRadio/wp8 (default).config
+++ b/USSCRadio/project_USSCRadio/wp8 (default).config
@@ -1,4 +1,4 @@
-<config platform="wp8" template="wp8 (default)">Created: Thu Jun 5 09:48:12 2014
+<config template="wp8 (default)" platform="wp8">Created: Thu Jun 5 09:48:12 2014
 By: Garret
 Using Template: wp8 (default)
 
