--- a/USSCRadio/project_USSCRadio/ws80 (default).config
+++ b/USSCRadio/project_USSCRadio/ws80 (default).config
@@ -1,4 +1,4 @@
-<config platform="ws80" template="ws80 (default)">Created: Thu Jun 5 09:48:12 2014
+<config template="ws80 (default)" platform="ws80">Created: Thu Jun 5 09:48:12 2014
 By: Garret
 Using Template: ws80 (default)
 
