--- a/USSCRadio/project_USSCRadio/Windows (android).config
+++ b/USSCRadio/project_USSCRadio/Windows (android).config
@@ -1,4 +1,4 @@
-<config platform="android" template="android (default)">Created: Thu Jun 5 09:48:26 2014
+<config template="android (default)" platform="android">Created: Thu Jun 5 09:48:26 2014
 By: Garret
 Using Template: android (default)
 
