--- a/USSCRadio/project_USSCRadio/Windows (iphone).config
+++ b/USSCRadio/project_USSCRadio/Windows (iphone).config
@@ -1,4 +1,4 @@
-<config platform="iphone" template="iphone (default)">Created: Thu Jun 5 09:48:26 2014
+<config template="iphone (default)" platform="iphone">Created: Thu Jun 5 09:48:26 2014
 By: Garret
 Using Template: iphone (default)
 
