--- a/USSCRadio/project_USSCRadio/ws81 (default).config
+++ b/USSCRadio/project_USSCRadio/ws81 (default).config
@@ -1,4 +1,4 @@
-<config platform="ws81" template="ws81 (default)">Created: Thu Jun 5 09:48:12 2014
+<config template="ws81 (default)" platform="ws81">Created: Thu Jun 5 09:48:12 2014
 By: Garret
 Using Template: ws81 (default)
 
