Added backgrounds for placement holders

--- a/UCCSRadio/project_USSCRadio/project.config
+++ b/UCCSRadio/project_USSCRadio/project.config
@@ -1,18 +1,18 @@
-<config platform="project" template="project (default)">Created: Fri Jun 6 09:33:00 2014
+<config template="project (default)" platform="project">Created: Fri Jun 6 09:33:00 2014
 By: lucasgeiken
 Using Template: project (default)
 
-&lt;description to go here><option name="icon" value="" fromDef="true"/>
-    <option name="splashscreen" value="" fromDef="true"/>
-    <option name="splashscreen-use-all" value="" fromDef="true"/>
-    <option name="splashscreen-auto-onblack" value="" fromDef="true"/>
-    <option name="assets" value="Default" fromDef="true"/>
-    <option name="embed-icf" value="" fromDef="true"/>
-    <option name="config" value="data/app.icf" fromDef="true"/>
-    <option name="name" value="USSCRadio" fromDef="true"/>
-    <option name="caption" value="USSCRadio" fromDef="true"/>
-    <option name="provider" value="lucasgeiken" fromDef="true"/>
-    <option name="copyright" value="(C) lucasgeiken" fromDef="true"/>
-    <option name="version" value="0.0.1" fromDef="true"/>
-    <option name="version-string" value="" fromDef="true"/>
+&lt;description to go here><option fromDef="true" value="" name="icon"/>
+    <option fromDef="true" value="" name="splashscreen"/>
+    <option fromDef="true" value="" name="splashscreen-use-all"/>
+    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
+    <option fromDef="true" value="Default" name="assets"/>
+    <option fromDef="true" value="" name="embed-icf"/>
+    <option fromDef="true" value="data/app.icf" name="config"/>
+    <option fromDef="true" value="USSCRadio" name="name"/>
+    <option fromDef="true" value="USSCRadio" name="caption"/>
+    <option fromDef="true" value="lucasgeiken" name="provider"/>
+    <option fromDef="true" value="(C) lucasgeiken" name="copyright"/>
+    <option fromDef="true" value="0.0.1" name="version"/>
+    <option fromDef="true" value="" name="version-string"/>
 </config>
