--- a/UCCSRadio/project_USSCRadio/osx (default).config
+++ b/UCCSRadio/project_USSCRadio/osx (default).config
@@ -1,28 +1,28 @@
-<config platform="osx" template="osx (default)">Created: Fri Jun 6 09:33:01 2014
+<config template="osx (default)" platform="osx">Created: Fri Jun 6 09:33:01 2014
 By: lucasgeiken
 Using Template: osx (default)
 
-&lt;description to go here><option name="osx-icon" value="" fromDef="true"/>
-    <option name="osx-info-plist" value="" fromDef="true"/>
-    <option name="osx-sign-for-store" value="" fromDef="true"/>
-    <option name="osx-minimum-osx-version" value="10.7" fromDef="true"/>
-    <option name="osx-signing-identity-app" value="3rd Party Mac Developer Application" fromDef="true"/>
-    <option name="osx-signing-identity-inst" value="3rd Party Mac Developer Installer" fromDef="true"/>
-    <option name="osx-appstore-category" value="public.app-category.games" fromDef="true"/>
-    <option name="osx-entitlements-plist" value="" fromDef="true"/>
-    <option name="icon" value="" fromDef="true"/>
-    <option name="splashscreen" value="" fromDef="true"/>
-    <option name="splashscreen-use-all" value="" fromDef="true"/>
-    <option name="splashscreen-auto-onblack" value="" fromDef="true"/>
-    <option name="assets" value="Default" fromDef="true"/>
-    <option name="embed-icf" value="" fromDef="true"/>
-    <option name="config" value="data/app.icf" fromDef="true"/>
-    <option name="name" value="USSCRadio" fromDef="true"/>
-    <option name="caption" value="USSCRadio" fromDef="true"/>
-    <option name="provider" value="lucasgeiken" fromDef="true"/>
-    <option name="copyright" value="(C) lucasgeiken" fromDef="true"/>
-    <option name="version" value="0.0.1" fromDef="true"/>
-    <option name="version-string" value="" fromDef="true"/>
-    <option name="osx-ext-dll" value="" fromDef="true"/>
-    <option name="osx-extra-res" value="" fromDef="true"/>
+&lt;description to go here><option fromDef="true" value="" name="osx-icon"/>
+    <option fromDef="true" value="" name="osx-info-plist"/>
+    <option fromDef="true" value="" name="osx-sign-for-store"/>
+    <option fromDef="true" value="10.7" name="osx-minimum-osx-version"/>
+    <option fromDef="true" value="3rd Party Mac Developer Application" name="osx-signing-identity-app"/>
+    <option fromDef="true" value="3rd Party Mac Developer Installer" name="osx-signing-identity-inst"/>
+    <option fromDef="true" value="public.app-category.games" name="osx-appstore-category"/>
+    <option fromDef="true" value="" name="osx-entitlements-plist"/>
+    <option fromDef="true" value="" name="icon"/>
+    <option fromDef="true" value="" name="splashscreen"/>
+    <option fromDef="true" value="" name="splashscreen-use-all"/>
+    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
+    <option fromDef="true" value="Default" name="assets"/>
+    <option fromDef="true" value="" name="embed-icf"/>
+    <option fromDef="true" value="data/app.icf" name="config"/>
+    <option fromDef="true" value="USSCRadio" name="name"/>
+    <option fromDef="true" value="USSCRadio" name="caption"/>
+    <option fromDef="true" value="lucasgeiken" name="provider"/>
+    <option fromDef="true" value="(C) lucasgeiken" name="copyright"/>
+    <option fromDef="true" value="0.0.1" name="version"/>
+    <option fromDef="true" value="" name="version-string"/>
+    <option fromDef="true" value="" name="osx-ext-dll"/>
+    <option fromDef="true" value="" name="osx-extra-res"/>
 </config>
