Added Http Stuff
Added HttpClient and its dependencies. good luck

--- a/UCCSRadio/project_USSCRadio/project.config
+++ b/UCCSRadio/project_USSCRadio/project.config
@@ -1,18 +1,18 @@
-<config template="project (default)" platform="project">Created: Fri Jun 6 09:33:00 2014
-By: lucasgeiken
-Using Template: project (default)
-
-&lt;description to go here><option fromDef="true" value="" name="icon"/>
-    <option fromDef="true" value="" name="splashscreen"/>
-    <option fromDef="true" value="" name="splashscreen-use-all"/>
-    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
-    <option fromDef="true" value="Default" name="assets"/>
-    <option fromDef="true" value="" name="embed-icf"/>
-    <option fromDef="true" value="data/app.icf" name="config"/>
-    <option fromDef="true" value="USSCRadio" name="name"/>
-    <option fromDef="true" value="USSCRadio" name="caption"/>
-    <option fromDef="true" value="lucasgeiken" name="provider"/>
-    <option fromDef="true" value="(C) lucasgeiken" name="copyright"/>
-    <option fromDef="true" value="0.0.1" name="version"/>
-    <option fromDef="true" value="" name="version-string"/>
+<config platform="project" template="project (default)">Created: Fri Jun 6 09:33:00 2014&#xd;
+By: lucasgeiken&#xd;
+Using Template: project (default)&#xd;
+&#xd;
+&lt;description to go here><option value="" fromDef="true" name="icon"/>
+    <option value="" fromDef="true" name="splashscreen"/>
+    <option value="" fromDef="true" name="splashscreen-use-all"/>
+    <option value="" fromDef="true" name="splashscreen-auto-onblack"/>
+    <option value="Default" fromDef="true" name="assets"/>
+    <option value="" fromDef="true" name="embed-icf"/>
+    <option value="data/app.icf" fromDef="true" name="config"/>
+    <option value="USSCRadio" fromDef="true" name="name"/>
+    <option value="USSCRadio" fromDef="true" name="caption"/>
+    <option value="Garret" fromDef="true" name="provider"/>
+    <option value="(C) Garret" fromDef="true" name="copyright"/>
+    <option value="0.0.1" fromDef="true" name="version"/>
+    <option value="" fromDef="true" name="version-string"/>
 </config>
