--- a/UCCSRadio/project_USSCRadio/android (default).config
+++ b/UCCSRadio/project_USSCRadio/android (default).config
@@ -1,32 +1,32 @@
-<config template="android (default)" platform="android">Created: Fri Jun 6 09:33:01 2014
-By: lucasgeiken
-Using Template: android (default)
-
-&lt;description to go here><option fromDef="true" value="" name="android-icon-dir"/>
-    <option fromDef="true" value="-ldpi;&lt;none>;-mdpi;&lt;none>;-hdpi;&lt;none>;-xhdpi;&lt;none>;-xxhdpi;&lt;none>;-xxxhdpi;&lt;none>" name="android-icon-group"/>
-    <option fromDef="true" value="" name="android-icon-gallery"/>
-    <option fromDef="true" value="" name="android-icon-nonstandard"/>
-    <option fromDef="true" value="" name="android-external-res"/>
-    <option fromDef="true" value="1" name="android-install-location"/>
-    <option fromDef="true" value="com.lucasgeiken.USSCRadio" name="android-pkgname"/>
-    <option fromDef="true" value="" name="icon"/>
-    <option fromDef="true" value="" name="splashscreen"/>
-    <option fromDef="true" value="" name="splashscreen-use-all"/>
-    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
-    <option fromDef="true" value="Default" name="assets"/>
-    <option fromDef="true" value="" name="embed-icf"/>
-    <option fromDef="true" value="data/app.icf" name="config"/>
-    <option fromDef="true" value="USSCRadio" name="name"/>
-    <option fromDef="true" value="USSCRadio" name="caption"/>
-    <option fromDef="true" value="lucasgeiken" name="provider"/>
-    <option fromDef="true" value="(C) lucasgeiken" name="copyright"/>
-    <option fromDef="true" value="0.0.1" name="version"/>
-    <option fromDef="true" value="" name="version-string"/>
-    <option fromDef="true" value="" name="android-manifest"/>
-    <option fromDef="true" value="" name="android-custom-activity"/>
-    <option fromDef="true" value="" name="android-extra-manifest"/>
-    <option fromDef="true" value="" name="android-extra-application-manifest"/>
-    <option fromDef="true" value="" name="android-extra-strings"/>
-    <option fromDef="true" value="" name="android-supports-gl-texture"/>
-    <option fromDef="true" value="" name="android-unsigned"/>
+<config platform="android" template="android (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+By: lucasgeiken&#xd;
+Using Template: android (default)&#xd;
+&#xd;
+&lt;description to go here><option value="" fromDef="true" name="android-icon-dir"/>
+    <option value="-ldpi;&lt;none>;-mdpi;&lt;none>;-hdpi;&lt;none>;-xhdpi;&lt;none>;-xxhdpi;&lt;none>;-xxxhdpi;&lt;none>" fromDef="true" name="android-icon-group"/>
+    <option value="" fromDef="true" name="android-icon-gallery"/>
+    <option value="" fromDef="true" name="android-icon-nonstandard"/>
+    <option value="" fromDef="true" name="android-external-res"/>
+    <option value="1" fromDef="true" name="android-install-location"/>
+    <option value="com.Garret.USSCRadio" fromDef="true" name="android-pkgname"/>
+    <option value="" fromDef="true" name="icon"/>
+    <option value="" fromDef="true" name="splashscreen"/>
+    <option value="" fromDef="true" name="splashscreen-use-all"/>
+    <option value="" fromDef="true" name="splashscreen-auto-onblack"/>
+    <option value="Default" fromDef="true" name="assets"/>
+    <option value="" fromDef="true" name="embed-icf"/>
+    <option value="data/app.icf" fromDef="true" name="config"/>
+    <option value="USSCRadio" fromDef="true" name="name"/>
+    <option value="USSCRadio" fromDef="true" name="caption"/>
+    <option value="Garret" fromDef="true" name="provider"/>
+    <option value="(C) Garret" fromDef="true" name="copyright"/>
+    <option value="0.0.1" fromDef="true" name="version"/>
+    <option value="" fromDef="true" name="version-string"/>
+    <option value="" fromDef="true" name="android-manifest"/>
+    <option value="" fromDef="true" name="android-custom-activity"/>
+    <option value="" fromDef="true" name="android-extra-manifest"/>
+    <option value="" fromDef="true" name="android-extra-application-manifest"/>
+    <option value="" fromDef="true" name="android-extra-strings"/>
+    <option value="" fromDef="true" name="android-supports-gl-texture"/>
+    <option value="" fromDef="true" name="android-unsigned"/>
 </config>
