--- a/UCCSRadio/project_USSCRadio/iphone (default).config
+++ b/UCCSRadio/project_USSCRadio/iphone (default).config
@@ -1,43 +1,43 @@
-<config platform="iphone" template="iphone (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+<config template="iphone (default)" platform="iphone">Created: Fri Jun 6 09:33:01 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: iphone (default)&#xd;
 &#xd;
-&lt;description to go here><option value="&quot;iphone&quot;" fromDef="false" name="iphone-application-type"/>
-    <option value="com.Garret.USSCRadio" fromDef="true" name="iphone-appid"/>
-    <option value="" fromDef="true" name="iphone-icon-dir"/>
-    <option value="-76;&lt;none>;-120;&lt;none>;-76@2x;&lt;none>" fromDef="true" name="iphone-icon-7-group"/>
-    <option value="-Small;&lt;none>;-Small-40;&lt;none>;-Small@2x;&lt;none>;-Small-40@2x;&lt;none>" fromDef="true" name="iphone-icon-7-search-group"/>
-    <option value="" fromDef="true" name="iphone-prerendered-icon"/>
-    <option value="" fromDef="true" name="iphone-splash-dir"/>
-    <option value="~iphone;&lt;none>;@2x~iphone;&lt;none>;-568h@2x~iphone;&lt;none>" fromDef="true" name="iphone-splash-group-iphone"/>
-    <option value="-Portrait~ipad;&lt;none>;-PortraitUpsideDown~ipad;&lt;none>;-Landscape~ipad;&lt;none>;-LandscapeRight~ipad;&lt;none>;-Portrait@2x~ipad;&lt;none>;-PortraitUpsideDown@2x~ipad;&lt;none>;-Landscape@2x~ipad;&lt;none>;-LandscapeRight@2x~ipad;&lt;none>" fromDef="true" name="iphone-splash-group-ipad"/>
-    <option value="" fromDef="true" name="iphone-show-status-bar"/>
-    <option value="" fromDef="true" name="icon"/>
-    <option value="" fromDef="true" name="splashscreen"/>
-    <option value="" fromDef="true" name="splashscreen-use-all"/>
-    <option value="" fromDef="true" name="splashscreen-auto-onblack"/>
-    <option value="Default" fromDef="true" name="assets"/>
-    <option value="" fromDef="true" name="embed-icf"/>
-    <option value="data/app.icf" fromDef="true" name="config"/>
-    <option value="USSCRadio" fromDef="true" name="name"/>
-    <option value="USSCRadio" fromDef="true" name="caption"/>
-    <option value="Garret" fromDef="true" name="provider"/>
-    <option value="(C) Garret" fromDef="true" name="copyright"/>
-    <option value="0.0.1" fromDef="true" name="version"/>
-    <option value="" fromDef="true" name="version-string"/>
-    <option value="" fromDef="true" name="itunes-artwork"/>
-    <option value=";&lt;none>;-72;&lt;none>;@2x;&lt;none>;-72@2x;&lt;none>" fromDef="true" name="iphone-icon-group"/>
-    <option value="-Small;&lt;none>;-Small-50;&lt;none>;-Small@2x;&lt;none>;-Small-50@2x;&lt;none>" fromDef="true" name="iphone-icon-search-group"/>
-    <option value="" fromDef="true" name="iphone-nosign"/>
-    <option value="" fromDef="true" name="iphone-sign-for-distribution"/>
-    <option value="" fromDef="true" name="iphone-provisioning-profile"/>
-    <option value="" fromDef="true" name="iphone-signing-identity"/>
-    <option value="English" fromDef="true" name="iphone-region"/>
-    <option value="" fromDef="true" name="iphone-info-plist"/>
-    <option value="" fromDef="true" name="iphone-persistent-wifi"/>
-    <option value="" fromDef="true" name="iphone-backgroundmode-audio"/>
-    <option value="" fromDef="true" name="iphone-app-fonts"/>
-    <option value="" fromDef="true" name="iphone-bundle-localisations"/>
-    <option value="" fromDef="true" name="iphone-bundle-url-name"/>
-    <option value="" fromDef="true" name="iphone-bundle-url-schemes"/>
+&lt;description to go here><option fromDef="false" value="&quot;iphone&quot;" name="iphone-application-type"/>
+    <option fromDef="true" value="com.Garret.USSCRadio" name="iphone-appid"/>
+    <option fromDef="true" value="" name="iphone-icon-dir"/>
+    <option fromDef="true" value="-76;&lt;none>;-120;&lt;none>;-76@2x;&lt;none>" name="iphone-icon-7-group"/>
+    <option fromDef="true" value="-Small;&lt;none>;-Small-40;&lt;none>;-Small@2x;&lt;none>;-Small-40@2x;&lt;none>" name="iphone-icon-7-search-group"/>
+    <option fromDef="true" value="" name="iphone-prerendered-icon"/>
+    <option fromDef="true" value="" name="iphone-splash-dir"/>
+    <option fromDef="true" value="~iphone;&lt;none>;@2x~iphone;&lt;none>;-568h@2x~iphone;&lt;none>" name="iphone-splash-group-iphone"/>
+    <option fromDef="true" value="-Portrait~ipad;&lt;none>;-PortraitUpsideDown~ipad;&lt;none>;-Landscape~ipad;&lt;none>;-LandscapeRight~ipad;&lt;none>;-Portrait@2x~ipad;&lt;none>;-PortraitUpsideDown@2x~ipad;&lt;none>;-Landscape@2x~ipad;&lt;none>;-LandscapeRight@2x~ipad;&lt;none>" name="iphone-splash-group-ipad"/>
+    <option fromDef="true" value="" name="iphone-show-status-bar"/>
+    <option fromDef="true" value="" name="icon"/>
+    <option fromDef="true" value="" name="splashscreen"/>
+    <option fromDef="true" value="" name="splashscreen-use-all"/>
+    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
+    <option fromDef="true" value="Default" name="assets"/>
+    <option fromDef="true" value="" name="embed-icf"/>
+    <option fromDef="true" value="data/app.icf" name="config"/>
+    <option fromDef="true" value="USSCRadio" name="name"/>
+    <option fromDef="true" value="USSCRadio" name="caption"/>
+    <option fromDef="true" value="Garret" name="provider"/>
+    <option fromDef="true" value="(C) Garret" name="copyright"/>
+    <option fromDef="true" value="0.0.1" name="version"/>
+    <option fromDef="true" value="" name="version-string"/>
+    <option fromDef="true" value="" name="itunes-artwork"/>
+    <option fromDef="true" value=";&lt;none>;-72;&lt;none>;@2x;&lt;none>;-72@2x;&lt;none>" name="iphone-icon-group"/>
+    <option fromDef="true" value="-Small;&lt;none>;-Small-50;&lt;none>;-Small@2x;&lt;none>;-Small-50@2x;&lt;none>" name="iphone-icon-search-group"/>
+    <option fromDef="true" value="" name="iphone-nosign"/>
+    <option fromDef="true" value="" name="iphone-sign-for-distribution"/>
+    <option fromDef="true" value="" name="iphone-provisioning-profile"/>
+    <option fromDef="true" value="" name="iphone-signing-identity"/>
+    <option fromDef="true" value="English" name="iphone-region"/>
+    <option fromDef="true" value="" name="iphone-info-plist"/>
+    <option fromDef="true" value="" name="iphone-persistent-wifi"/>
+    <option fromDef="true" value="" name="iphone-backgroundmode-audio"/>
+    <option fromDef="true" value="" name="iphone-app-fonts"/>
+    <option fromDef="true" value="" name="iphone-bundle-localisations"/>
+    <option fromDef="true" value="" name="iphone-bundle-url-name"/>
+    <option fromDef="true" value="" name="iphone-bundle-url-schemes"/>
 </config>
