--- a/UCCSRadio/project_USSCRadio/osx (default).config
+++ b/UCCSRadio/project_USSCRadio/osx (default).config
@@ -1,28 +1,28 @@
-<config platform="osx" template="osx (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+<config template="osx (default)" platform="osx">Created: Fri Jun 6 09:33:01 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: osx (default)&#xd;
 &#xd;
-&lt;description to go here><option value="" fromDef="true" name="osx-icon"/>
-    <option value="" fromDef="true" name="osx-info-plist"/>
-    <option value="" fromDef="true" name="osx-sign-for-store"/>
-    <option value="10.7" fromDef="true" name="osx-minimum-osx-version"/>
-    <option value="3rd Party Mac Developer Application" fromDef="true" name="osx-signing-identity-app"/>
-    <option value="3rd Party Mac Developer Installer" fromDef="true" name="osx-signing-identity-inst"/>
-    <option value="public.app-category.games" fromDef="true" name="osx-appstore-category"/>
-    <option value="" fromDef="true" name="osx-entitlements-plist"/>
-    <option value="" fromDef="true" name="icon"/>
-    <option value="" fromDef="true" name="splashscreen"/>
-    <option value="" fromDef="true" name="splashscreen-use-all"/>
-    <option value="" fromDef="true" name="splashscreen-auto-onblack"/>
-    <option value="Default" fromDef="true" name="assets"/>
-    <option value="" fromDef="true" name="embed-icf"/>
-    <option value="data/app.icf" fromDef="true" name="config"/>
-    <option value="USSCRadio" fromDef="true" name="name"/>
-    <option value="USSCRadio" fromDef="true" name="caption"/>
-    <option value="Garret" fromDef="true" name="provider"/>
-    <option value="(C) Garret" fromDef="true" name="copyright"/>
-    <option value="0.0.1" fromDef="true" name="version"/>
-    <option value="" fromDef="true" name="version-string"/>
-    <option value="" fromDef="true" name="osx-ext-dll"/>
-    <option value="" fromDef="true" name="osx-extra-res"/>
+&lt;description to go here><option fromDef="true" value="" name="osx-icon"/>
+    <option fromDef="true" value="" name="osx-info-plist"/>
+    <option fromDef="true" value="" name="osx-sign-for-store"/>
+    <option fromDef="true" value="10.7" name="osx-minimum-osx-version"/>
+    <option fromDef="true" value="3rd Party Mac Developer Application" name="osx-signing-identity-app"/>
+    <option fromDef="true" value="3rd Party Mac Developer Installer" name="osx-signing-identity-inst"/>
+    <option fromDef="true" value="public.app-category.games" name="osx-appstore-category"/>
+    <option fromDef="true" value="" name="osx-entitlements-plist"/>
+    <option fromDef="true" value="" name="icon"/>
+    <option fromDef="true" value="" name="splashscreen"/>
+    <option fromDef="true" value="" name="splashscreen-use-all"/>
+    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
+    <option fromDef="true" value="Default" name="assets"/>
+    <option fromDef="true" value="" name="embed-icf"/>
+    <option fromDef="true" value="data/app.icf" name="config"/>
+    <option fromDef="true" value="USSCRadio" name="name"/>
+    <option fromDef="true" value="USSCRadio" name="caption"/>
+    <option fromDef="true" value="Garret" name="provider"/>
+    <option fromDef="true" value="(C) Garret" name="copyright"/>
+    <option fromDef="true" value="0.0.1" name="version"/>
+    <option fromDef="true" value="" name="version-string"/>
+    <option fromDef="true" value="" name="osx-ext-dll"/>
+    <option fromDef="true" value="" name="osx-extra-res"/>
 </config>
