--- a/UCCSRadio/project_USSCRadio/osx (default).config
+++ b/UCCSRadio/project_USSCRadio/osx (default).config
@@ -2,27 +2,27 @@
 By: lucasgeiken&#xd;
 Using Template: osx (default)&#xd;
 &#xd;
-&lt;description to go here><option value="" fromDef="true" name="osx-icon"/>
-    <option value="" fromDef="true" name="osx-info-plist"/>
-    <option value="" fromDef="true" name="osx-sign-for-store"/>
-    <option value="10.7" fromDef="true" name="osx-minimum-osx-version"/>
-    <option value="3rd Party Mac Developer Application" fromDef="true" name="osx-signing-identity-app"/>
-    <option value="3rd Party Mac Developer Installer" fromDef="true" name="osx-signing-identity-inst"/>
-    <option value="public.app-category.games" fromDef="true" name="osx-appstore-category"/>
-    <option value="" fromDef="true" name="osx-entitlements-plist"/>
-    <option value="" fromDef="true" name="icon"/>
-    <option value="" fromDef="true" name="splashscreen"/>
-    <option value="" fromDef="true" name="splashscreen-use-all"/>
-    <option value="" fromDef="true" name="splashscreen-auto-onblack"/>
-    <option value="Default" fromDef="true" name="assets"/>
-    <option value="" fromDef="true" name="embed-icf"/>
-    <option value="data/app.icf" fromDef="true" name="config"/>
-    <option value="USSCRadio" fromDef="true" name="name"/>
-    <option value="USSCRadio" fromDef="true" name="caption"/>
-    <option value="Garret" fromDef="true" name="provider"/>
-    <option value="(C) Garret" fromDef="true" name="copyright"/>
-    <option value="0.0.1" fromDef="true" name="version"/>
-    <option value="" fromDef="true" name="version-string"/>
-    <option value="" fromDef="true" name="osx-ext-dll"/>
-    <option value="" fromDef="true" name="osx-extra-res"/>
+&lt;description to go here><option name="osx-icon" value="" fromDef="true"/>
+    <option name="osx-info-plist" value="" fromDef="true"/>
+    <option name="osx-sign-for-store" value="" fromDef="true"/>
+    <option name="osx-minimum-osx-version" value="10.7" fromDef="true"/>
+    <option name="osx-signing-identity-app" value="3rd Party Mac Developer Application" fromDef="true"/>
+    <option name="osx-signing-identity-inst" value="3rd Party Mac Developer Installer" fromDef="true"/>
+    <option name="osx-appstore-category" value="public.app-category.games" fromDef="true"/>
+    <option name="osx-entitlements-plist" value="" fromDef="true"/>
+    <option name="icon" value="" fromDef="true"/>
+    <option name="splashscreen" value="" fromDef="true"/>
+    <option name="splashscreen-use-all" value="" fromDef="true"/>
+    <option name="splashscreen-auto-onblack" value="" fromDef="true"/>
+    <option name="assets" value="Default" fromDef="true"/>
+    <option name="embed-icf" value="" fromDef="true"/>
+    <option name="config" value="data/app.icf" fromDef="true"/>
+    <option name="name" value="USSCRadio" fromDef="true"/>
+    <option name="caption" value="USSCRadio" fromDef="true"/>
+    <option name="provider" value="lucasgeiken" fromDef="true"/>
+    <option name="copyright" value="(C) lucasgeiken" fromDef="true"/>
+    <option name="version" value="0.0.1" fromDef="true"/>
+    <option name="version-string" value="" fromDef="true"/>
+    <option name="osx-ext-dll" value="" fromDef="true"/>
+    <option name="osx-extra-res" value="" fromDef="true"/>
 </config>
