Added font correct files

--- a/UCCSRadio/project_USSCRadio/android (default).config
+++ b/UCCSRadio/project_USSCRadio/android (default).config
@@ -1,4 +1,4 @@
-<config platform="android" template="android (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+<config template="android (default)" platform="android">Created: Fri Jun 6 09:33:01 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: android (default)&#xd;
 &#xd;
@@ -8,7 +8,7 @@ Using Template: android (default)&#xd;
     <option name="android-icon-nonstandard" value="" fromDef="true"/>
     <option name="android-external-res" value="" fromDef="true"/>
     <option name="android-install-location" value="1" fromDef="true"/>
-    <option name="android-pkgname" value="com.Garret.USSCRadio" fromDef="true"/>
+    <option name="android-pkgname" value="com.lucasgeiken.USSCRadio" fromDef="true"/>
     <option name="icon" value="" fromDef="true"/>
     <option name="splashscreen" value="" fromDef="true"/>
     <option name="splashscreen-use-all" value="" fromDef="true"/>
