--- a/UCCSRadio/project_USSCRadio/iphone (default).config
+++ b/UCCSRadio/project_USSCRadio/iphone (default).config
@@ -1,9 +1,9 @@
-<config platform="iphone" template="iphone (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+<config template="iphone (default)" platform="iphone">Created: Fri Jun 6 09:33:01 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: iphone (default)&#xd;
 &#xd;
 &lt;description to go here><option name="iphone-application-type" value="&quot;iphone&quot;" fromDef="false"/>
-    <option name="iphone-appid" value="com.Garret.USSCRadio" fromDef="true"/>
+    <option name="iphone-appid" value="com.lucasgeiken.USSCRadio" fromDef="true"/>
     <option name="iphone-icon-dir" value="" fromDef="true"/>
     <option name="iphone-icon-7-group" value="-76;&lt;none>;-120;&lt;none>;-76@2x;&lt;none>" fromDef="true"/>
     <option name="iphone-icon-7-search-group" value="-Small;&lt;none>;-Small-40;&lt;none>;-Small@2x;&lt;none>;-Small-40@2x;&lt;none>" fromDef="true"/>
