--- a/UCCSRadio/project_USSCRadio/osx (default).config
+++ b/UCCSRadio/project_USSCRadio/osx (default).config
@@ -1,4 +1,4 @@
-<config platform="osx" template="osx (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+<config template="osx (default)" platform="osx">Created: Fri Jun 6 09:33:01 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: osx (default)&#xd;
 &#xd;
