--- a/UCCSRadio/project_USSCRadio/wp8 (default).config
+++ b/UCCSRadio/project_USSCRadio/wp8 (default).config
@@ -1,4 +1,4 @@
-<config platform="wp8" template="wp8 (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+<config template="wp8 (default)" platform="wp8">Created: Fri Jun 6 09:33:01 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: wp8 (default)&#xd;
 &#xd;
