--- a/UCCSRadio/project_USSCRadio/ws80 (default).config
+++ b/UCCSRadio/project_USSCRadio/ws80 (default).config
@@ -1,4 +1,4 @@
-<config platform="ws80" template="ws80 (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+<config template="ws80 (default)" platform="ws80">Created: Fri Jun 6 09:33:01 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: ws80 (default)&#xd;
 &#xd;
