--- a/UCCSRadio/project_USSCRadio/ws81 (default).config
+++ b/UCCSRadio/project_USSCRadio/ws81 (default).config
@@ -1,4 +1,4 @@
-<config platform="ws81" template="ws81 (default)">Created: Fri Jun 6 09:33:01 2014&#xd;
+<config template="ws81 (default)" platform="ws81">Created: Fri Jun 6 09:33:01 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: ws81 (default)&#xd;
 &#xd;
