--- a/UCCSRadio/project_USSCRadio/project.config
+++ b/UCCSRadio/project_USSCRadio/project.config
@@ -1,4 +1,4 @@
-<config platform="project" template="project (default)">Created: Fri Jun 6 09:33:00 2014&#xd;
+<config template="project (default)" platform="project">Created: Fri Jun 6 09:33:00 2014&#xd;
 By: lucasgeiken&#xd;
 Using Template: project (default)&#xd;
 &#xd;
