So I changed a lot of things.... but it works.. sort of

--- a/UCCSRadio/project_USSCRadio/project.config
+++ b/UCCSRadio/project_USSCRadio/project.config
@@ -2,17 +2,17 @@
 By: lucasgeiken&#xd;
 Using Template: project (default)&#xd;
 &#xd;
-&lt;description to go here><option fromDef="true" value="" name="icon"/>
-    <option fromDef="true" value="" name="splashscreen"/>
-    <option fromDef="true" value="" name="splashscreen-use-all"/>
-    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
-    <option fromDef="true" value="Default" name="assets"/>
-    <option fromDef="true" value="" name="embed-icf"/>
-    <option fromDef="true" value="data/app.icf" name="config"/>
-    <option fromDef="true" value="USSCRadio" name="name"/>
-    <option fromDef="true" value="USSCRadio" name="caption"/>
-    <option fromDef="true" value="Garret" name="provider"/>
-    <option fromDef="true" value="(C) Garret" name="copyright"/>
-    <option fromDef="true" value="0.0.1" name="version"/>
-    <option fromDef="true" value="" name="version-string"/>
+&lt;description to go here><option value="" name="icon" fromDef="true"/>
+    <option value="" name="splashscreen" fromDef="true"/>
+    <option value="" name="splashscreen-use-all" fromDef="true"/>
+    <option value="" name="splashscreen-auto-onblack" fromDef="true"/>
+    <option value="Default" name="assets" fromDef="true"/>
+    <option value="" name="embed-icf" fromDef="true"/>
+    <option value="data/app.icf" name="config" fromDef="true"/>
+    <option value="USSCRadio" name="name" fromDef="true"/>
+    <option value="USSCRadio" name="caption" fromDef="true"/>
+    <option value="Garret" name="provider" fromDef="true"/>
+    <option value="(C) Garret" name="copyright" fromDef="true"/>
+    <option value="0.0.1" name="version" fromDef="true"/>
+    <option value="" name="version-string" fromDef="true"/>
 </config>
