--- a/UCCSRadio/project_USSCRadio/wp8 (default).config
+++ b/UCCSRadio/project_USSCRadio/wp8 (default).config
@@ -2,40 +2,40 @@
 By: lucasgeiken&#xd;
 Using Template: wp8 (default)&#xd;
 &#xd;
-&lt;description to go here><option fromDef="true" value="" name="wp8-author"/>
-    <option fromDef="true" value="" name="wp8-publisher-id"/>
-    <option fromDef="true" value="" name="wp8-description"/>
-    <option fromDef="true" value="" name="wp8-product-id"/>
-    <option fromDef="true" value="" name="wp8-exclude-wvga"/>
-    <option fromDef="true" value="" name="wp8-exclude-wxga"/>
-    <option fromDef="true" value="" name="wp8-exclude-720p"/>
-    <option fromDef="true" value="" name="wp8-higher-mem"/>
-    <option fromDef="true" value="" name="wp8-exclude-low-mem"/>
-    <option fromDef="true" value="" name="icon"/>
-    <option fromDef="true" value="" name="splashscreen"/>
-    <option fromDef="true" value="" name="splashscreen-use-all"/>
-    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
-    <option fromDef="true" value="Default" name="assets"/>
-    <option fromDef="true" value="" name="embed-icf"/>
-    <option fromDef="true" value="data/app.icf" name="config"/>
-    <option fromDef="true" value="USSCRadio" name="name"/>
-    <option fromDef="true" value="USSCRadio" name="caption"/>
-    <option fromDef="true" value="Garret" name="provider"/>
-    <option fromDef="true" value="(C) Garret" name="copyright"/>
-    <option fromDef="true" value="0.0.1" name="version"/>
-    <option fromDef="true" value="" name="version-string"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-title"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-back-title"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-back-content"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-small-image"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-medium-front-image"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-medium-back-image"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-supports-large"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-large-front-image"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-large-back-image"/>
-    <option fromDef="true" value="" name="wp8-tile-fliptemplate-large-back-content"/>
-    <option fromDef="true" value="" name="wp8-custom-manifest"/>
-    <option fromDef="true" value="" name="wp8-custom-manifest-fill"/>
-    <option fromDef="true" value="" name="wp8-genre-isgame"/>
-    <option fromDef="true" value="" name="wp8-ext-capabilities"/>
+&lt;description to go here><option value="" name="wp8-author" fromDef="true"/>
+    <option value="" name="wp8-publisher-id" fromDef="true"/>
+    <option value="" name="wp8-description" fromDef="true"/>
+    <option value="" name="wp8-product-id" fromDef="true"/>
+    <option value="" name="wp8-exclude-wvga" fromDef="true"/>
+    <option value="" name="wp8-exclude-wxga" fromDef="true"/>
+    <option value="" name="wp8-exclude-720p" fromDef="true"/>
+    <option value="" name="wp8-higher-mem" fromDef="true"/>
+    <option value="" name="wp8-exclude-low-mem" fromDef="true"/>
+    <option value="" name="icon" fromDef="true"/>
+    <option value="" name="splashscreen" fromDef="true"/>
+    <option value="" name="splashscreen-use-all" fromDef="true"/>
+    <option value="" name="splashscreen-auto-onblack" fromDef="true"/>
+    <option value="Default" name="assets" fromDef="true"/>
+    <option value="" name="embed-icf" fromDef="true"/>
+    <option value="data/app.icf" name="config" fromDef="true"/>
+    <option value="USSCRadio" name="name" fromDef="true"/>
+    <option value="USSCRadio" name="caption" fromDef="true"/>
+    <option value="Garret" name="provider" fromDef="true"/>
+    <option value="(C) Garret" name="copyright" fromDef="true"/>
+    <option value="0.0.1" name="version" fromDef="true"/>
+    <option value="" name="version-string" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-title" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-back-title" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-back-content" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-small-image" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-medium-front-image" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-medium-back-image" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-supports-large" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-large-front-image" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-large-back-image" fromDef="true"/>
+    <option value="" name="wp8-tile-fliptemplate-large-back-content" fromDef="true"/>
+    <option value="" name="wp8-custom-manifest" fromDef="true"/>
+    <option value="" name="wp8-custom-manifest-fill" fromDef="true"/>
+    <option value="" name="wp8-genre-isgame" fromDef="true"/>
+    <option value="" name="wp8-ext-capabilities" fromDef="true"/>
 </config>
