--- a/UCCSRadio/project_USSCRadio/android (default).config
+++ b/UCCSRadio/project_USSCRadio/android (default).config
@@ -1,92 +1,14 @@
-<config template="android (default)" platform="android">Created: Fri Jun 6 09:33:01 2014&#xd;
-By: lucasgeiken&#xd;
-Using Template: android (default)&#xd;
-&#xd;
-<<<<<<< HEAD
-&lt;description to go here><option value="" name="android-icon-dir" fromDef="true"/>
-    <option value="-ldpi;&lt;none>;-mdpi;&lt;none>;-hdpi;&lt;none>;-xhdpi;&lt;none>;-xxhdpi;&lt;none>;-xxxhdpi;&lt;none>" name="android-icon-group" fromDef="true"/>
-    <option value="" name="android-icon-gallery" fromDef="true"/>
-    <option value="" name="android-icon-nonstandard" fromDef="true"/>
-    <option value="" name="android-external-res" fromDef="true"/>
-    <option value="1" name="android-install-location" fromDef="true"/>
-    <option value="com.Garret.USSCRadio" name="android-pkgname" fromDef="true"/>
-    <option value="" name="icon" fromDef="true"/>
-    <option value="" name="splashscreen" fromDef="true"/>
-    <option value="" name="splashscreen-use-all" fromDef="true"/>
-    <option value="" name="splashscreen-auto-onblack" fromDef="true"/>
-    <option value="Default" name="assets" fromDef="true"/>
-    <option value="" name="embed-icf" fromDef="true"/>
-    <option value="data/app.icf" name="config" fromDef="true"/>
-    <option value="USSCRadio" name="name" fromDef="true"/>
-    <option value="USSCRadio" name="caption" fromDef="true"/>
-    <option value="Garret" name="provider" fromDef="true"/>
-    <option value="(C) Garret" name="copyright" fromDef="true"/>
-    <option value="0.0.1" name="version" fromDef="true"/>
-    <option value="" name="version-string" fromDef="true"/>
-    <option value="" name="android-manifest" fromDef="true"/>
-    <option value="" name="android-custom-activity" fromDef="true"/>
-    <option value="" name="android-extra-manifest" fromDef="true"/>
-    <option value="" name="android-extra-application-manifest" fromDef="true"/>
-    <option value="" name="android-extra-strings" fromDef="true"/>
-    <option value="" name="android-supports-gl-texture" fromDef="true"/>
-    <option value="" name="android-unsigned" fromDef="true"/>
-=======
-<<<<<<< HEAD
-&lt;description to go here><option name="android-icon-dir" value="" fromDef="true"/>
-    <option name="android-icon-group" value="-ldpi;&lt;none>;-mdpi;&lt;none>;-hdpi;&lt;none>;-xhdpi;&lt;none>;-xxhdpi;&lt;none>;-xxxhdpi;&lt;none>" fromDef="true"/>
-    <option name="android-icon-gallery" value="" fromDef="true"/>
-    <option name="android-icon-nonstandard" value="" fromDef="true"/>
-    <option name="android-external-res" value="" fromDef="true"/>
-    <option name="android-install-location" value="1" fromDef="true"/>
-    <option name="android-pkgname" value="com.lucasgeiken.USSCRadio" fromDef="true"/>
-    <option name="icon" value="" fromDef="true"/>
+<config template="" platform=""><option name="icon" value="" fromDef="true"/>
     <option name="splashscreen" value="" fromDef="true"/>
     <option name="splashscreen-use-all" value="" fromDef="true"/>
     <option name="splashscreen-auto-onblack" value="" fromDef="true"/>
     <option name="assets" value="Default" fromDef="true"/>
     <option name="embed-icf" value="" fromDef="true"/>
-    <option name="config" value="data/app.icf" fromDef="true"/>
+    <option name="config" value="" fromDef="true"/>
     <option name="name" value="USSCRadio" fromDef="true"/>
     <option name="caption" value="USSCRadio" fromDef="true"/>
     <option name="provider" value="lucasgeiken" fromDef="true"/>
     <option name="copyright" value="(C) lucasgeiken" fromDef="true"/>
     <option name="version" value="0.0.1" fromDef="true"/>
     <option name="version-string" value="" fromDef="true"/>
-    <option name="android-manifest" value="" fromDef="true"/>
-    <option name="android-custom-activity" value="" fromDef="true"/>
-    <option name="android-extra-manifest" value="" fromDef="true"/>
-    <option name="android-extra-application-manifest" value="" fromDef="true"/>
-    <option name="android-extra-strings" value="" fromDef="true"/>
-    <option name="android-supports-gl-texture" value="" fromDef="true"/>
-    <option name="android-unsigned" value="" fromDef="true"/>
-=======
-&lt;description to go here><option fromDef="true" value="" name="android-icon-dir"/>
-    <option fromDef="true" value="-ldpi;&lt;none>;-mdpi;&lt;none>;-hdpi;&lt;none>;-xhdpi;&lt;none>;-xxhdpi;&lt;none>;-xxxhdpi;&lt;none>" name="android-icon-group"/>
-    <option fromDef="true" value="" name="android-icon-gallery"/>
-    <option fromDef="true" value="" name="android-icon-nonstandard"/>
-    <option fromDef="true" value="" name="android-external-res"/>
-    <option fromDef="true" value="1" name="android-install-location"/>
-    <option fromDef="true" value="com.Garret.USSCRadio" name="android-pkgname"/>
-    <option fromDef="true" value="" name="icon"/>
-    <option fromDef="true" value="" name="splashscreen"/>
-    <option fromDef="true" value="" name="splashscreen-use-all"/>
-    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
-    <option fromDef="true" value="Default" name="assets"/>
-    <option fromDef="true" value="" name="embed-icf"/>
-    <option fromDef="true" value="data/app.icf" name="config"/>
-    <option fromDef="true" value="USSCRadio" name="name"/>
-    <option fromDef="true" value="USSCRadio" name="caption"/>
-    <option fromDef="true" value="Garret" name="provider"/>
-    <option fromDef="true" value="(C) Garret" name="copyright"/>
-    <option fromDef="true" value="0.0.1" name="version"/>
-    <option fromDef="true" value="" name="version-string"/>
-    <option fromDef="true" value="" name="android-manifest"/>
-    <option fromDef="true" value="" name="android-custom-activity"/>
-    <option fromDef="true" value="" name="android-extra-manifest"/>
-    <option fromDef="true" value="" name="android-extra-application-manifest"/>
-    <option fromDef="true" value="" name="android-extra-strings"/>
-    <option fromDef="true" value="" name="android-supports-gl-texture"/>
-    <option fromDef="true" value="" name="android-unsigned"/>
->>>>>>> f1e564ceee45d702778688e62f1d8fb6547cfb99
->>>>>>> fe3ef13fd786b043881ec3f7626b473b4cc5b506
 </config>
