--- a/UCCSRadio/project_USSCRadio/iphone (default).config
+++ b/UCCSRadio/project_USSCRadio/iphone (default).config
@@ -1,125 +1,14 @@
-<config template="iphone (default)" platform="iphone">Created: Fri Jun 6 09:33:01 2014&#xd;
-By: lucasgeiken&#xd;
-Using Template: iphone (default)&#xd;
-&#xd;
-<<<<<<< HEAD
-&lt;description to go here><option value="&quot;iphone&quot;" name="iphone-application-type" fromDef="false"/>
-    <option value="com.Garret.USSCRadio" name="iphone-appid" fromDef="true"/>
-    <option value="" name="iphone-icon-dir" fromDef="true"/>
-    <option value="-76;&lt;none>;-120;&lt;none>;-76@2x;&lt;none>" name="iphone-icon-7-group" fromDef="true"/>
-    <option value="-Small;&lt;none>;-Small-40;&lt;none>;-Small@2x;&lt;none>;-Small-40@2x;&lt;none>" name="iphone-icon-7-search-group" fromDef="true"/>
-    <option value="" name="iphone-prerendered-icon" fromDef="true"/>
-    <option value="" name="iphone-splash-dir" fromDef="true"/>
-    <option value="~iphone;&lt;none>;@2x~iphone;&lt;none>;-568h@2x~iphone;&lt;none>" name="iphone-splash-group-iphone" fromDef="true"/>
-    <option value="-Portrait~ipad;&lt;none>;-PortraitUpsideDown~ipad;&lt;none>;-Landscape~ipad;&lt;none>;-LandscapeRight~ipad;&lt;none>;-Portrait@2x~ipad;&lt;none>;-PortraitUpsideDown@2x~ipad;&lt;none>;-Landscape@2x~ipad;&lt;none>;-LandscapeRight@2x~ipad;&lt;none>" name="iphone-splash-group-ipad" fromDef="true"/>
-    <option value="" name="iphone-show-status-bar" fromDef="true"/>
-    <option value="" name="icon" fromDef="true"/>
-    <option value="" name="splashscreen" fromDef="true"/>
-    <option value="" name="splashscreen-use-all" fromDef="true"/>
-    <option value="" name="splashscreen-auto-onblack" fromDef="true"/>
-    <option value="Default" name="assets" fromDef="true"/>
-    <option value="" name="embed-icf" fromDef="true"/>
-    <option value="data/app.icf" name="config" fromDef="true"/>
-    <option value="USSCRadio" name="name" fromDef="true"/>
-    <option value="USSCRadio" name="caption" fromDef="true"/>
-    <option value="Garret" name="provider" fromDef="true"/>
-    <option value="(C) Garret" name="copyright" fromDef="true"/>
-    <option value="0.0.1" name="version" fromDef="true"/>
-    <option value="" name="version-string" fromDef="true"/>
-    <option value="" name="itunes-artwork" fromDef="true"/>
-    <option value=";&lt;none>;-72;&lt;none>;@2x;&lt;none>;-72@2x;&lt;none>" name="iphone-icon-group" fromDef="true"/>
-    <option value="-Small;&lt;none>;-Small-50;&lt;none>;-Small@2x;&lt;none>;-Small-50@2x;&lt;none>" name="iphone-icon-search-group" fromDef="true"/>
-    <option value="" name="iphone-nosign" fromDef="true"/>
-    <option value="" name="iphone-sign-for-distribution" fromDef="true"/>
-    <option value="" name="iphone-provisioning-profile" fromDef="true"/>
-    <option value="" name="iphone-signing-identity" fromDef="true"/>
-    <option value="English" name="iphone-region" fromDef="true"/>
-    <option value="" name="iphone-info-plist" fromDef="true"/>
-    <option value="" name="iphone-persistent-wifi" fromDef="true"/>
-    <option value="" name="iphone-backgroundmode-audio" fromDef="true"/>
-    <option value="" name="iphone-app-fonts" fromDef="true"/>
-    <option value="" name="iphone-bundle-localisations" fromDef="true"/>
-    <option value="" name="iphone-bundle-url-name" fromDef="true"/>
-    <option value="" name="iphone-bundle-url-schemes" fromDef="true"/>
-=======
-<<<<<<< HEAD
-&lt;description to go here><option name="iphone-application-type" value="&quot;iphone&quot;" fromDef="false"/>
-    <option name="iphone-appid" value="com.lucasgeiken.USSCRadio" fromDef="true"/>
-    <option name="iphone-icon-dir" value="" fromDef="true"/>
-    <option name="iphone-icon-7-group" value="-76;&lt;none>;-120;&lt;none>;-76@2x;&lt;none>" fromDef="true"/>
-    <option name="iphone-icon-7-search-group" value="-Small;&lt;none>;-Small-40;&lt;none>;-Small@2x;&lt;none>;-Small-40@2x;&lt;none>" fromDef="true"/>
-    <option name="iphone-prerendered-icon" value="" fromDef="true"/>
-    <option name="iphone-splash-dir" value="" fromDef="true"/>
-    <option name="iphone-splash-group-iphone" value="~iphone;&lt;none>;@2x~iphone;&lt;none>;-568h@2x~iphone;&lt;none>" fromDef="true"/>
-    <option name="iphone-splash-group-ipad" value="-Portrait~ipad;&lt;none>;-PortraitUpsideDown~ipad;&lt;none>;-Landscape~ipad;&lt;none>;-LandscapeRight~ipad;&lt;none>;-Portrait@2x~ipad;&lt;none>;-PortraitUpsideDown@2x~ipad;&lt;none>;-Landscape@2x~ipad;&lt;none>;-LandscapeRight@2x~ipad;&lt;none>" fromDef="true"/>
-    <option name="iphone-show-status-bar" value="" fromDef="true"/>
-    <option name="icon" value="" fromDef="true"/>
+<config template="" platform=""><option name="icon" value="" fromDef="true"/>
     <option name="splashscreen" value="" fromDef="true"/>
     <option name="splashscreen-use-all" value="" fromDef="true"/>
     <option name="splashscreen-auto-onblack" value="" fromDef="true"/>
     <option name="assets" value="Default" fromDef="true"/>
     <option name="embed-icf" value="" fromDef="true"/>
-    <option name="config" value="data/app.icf" fromDef="true"/>
+    <option name="config" value="" fromDef="true"/>
     <option name="name" value="USSCRadio" fromDef="true"/>
     <option name="caption" value="USSCRadio" fromDef="true"/>
     <option name="provider" value="lucasgeiken" fromDef="true"/>
     <option name="copyright" value="(C) lucasgeiken" fromDef="true"/>
     <option name="version" value="0.0.1" fromDef="true"/>
     <option name="version-string" value="" fromDef="true"/>
-    <option name="itunes-artwork" value="" fromDef="true"/>
-    <option name="iphone-icon-group" value=";&lt;none>;-72;&lt;none>;@2x;&lt;none>;-72@2x;&lt;none>" fromDef="true"/>
-    <option name="iphone-icon-search-group" value="-Small;&lt;none>;-Small-50;&lt;none>;-Small@2x;&lt;none>;-Small-50@2x;&lt;none>" fromDef="true"/>
-    <option name="iphone-nosign" value="" fromDef="true"/>
-    <option name="iphone-sign-for-distribution" value="" fromDef="true"/>
-    <option name="iphone-provisioning-profile" value="" fromDef="true"/>
-    <option name="iphone-signing-identity" value="" fromDef="true"/>
-    <option name="iphone-region" value="English" fromDef="true"/>
-    <option name="iphone-info-plist" value="" fromDef="true"/>
-    <option name="iphone-persistent-wifi" value="" fromDef="true"/>
-    <option name="iphone-backgroundmode-audio" value="" fromDef="true"/>
-    <option name="iphone-app-fonts" value="" fromDef="true"/>
-    <option name="iphone-bundle-localisations" value="" fromDef="true"/>
-    <option name="iphone-bundle-url-name" value="" fromDef="true"/>
-    <option name="iphone-bundle-url-schemes" value="" fromDef="true"/>
-=======
-&lt;description to go here><option fromDef="false" value="&quot;iphone&quot;" name="iphone-application-type"/>
-    <option fromDef="true" value="com.Garret.USSCRadio" name="iphone-appid"/>
-    <option fromDef="true" value="" name="iphone-icon-dir"/>
-    <option fromDef="true" value="-76;&lt;none>;-120;&lt;none>;-76@2x;&lt;none>" name="iphone-icon-7-group"/>
-    <option fromDef="true" value="-Small;&lt;none>;-Small-40;&lt;none>;-Small@2x;&lt;none>;-Small-40@2x;&lt;none>" name="iphone-icon-7-search-group"/>
-    <option fromDef="true" value="" name="iphone-prerendered-icon"/>
-    <option fromDef="true" value="" name="iphone-splash-dir"/>
-    <option fromDef="true" value="~iphone;&lt;none>;@2x~iphone;&lt;none>;-568h@2x~iphone;&lt;none>" name="iphone-splash-group-iphone"/>
-    <option fromDef="true" value="-Portrait~ipad;&lt;none>;-PortraitUpsideDown~ipad;&lt;none>;-Landscape~ipad;&lt;none>;-LandscapeRight~ipad;&lt;none>;-Portrait@2x~ipad;&lt;none>;-PortraitUpsideDown@2x~ipad;&lt;none>;-Landscape@2x~ipad;&lt;none>;-LandscapeRight@2x~ipad;&lt;none>" name="iphone-splash-group-ipad"/>
-    <option fromDef="true" value="" name="iphone-show-status-bar"/>
-    <option fromDef="true" value="" name="icon"/>
-    <option fromDef="true" value="" name="splashscreen"/>
-    <option fromDef="true" value="" name="splashscreen-use-all"/>
-    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
-    <option fromDef="true" value="Default" name="assets"/>
-    <option fromDef="true" value="" name="embed-icf"/>
-    <option fromDef="true" value="data/app.icf" name="config"/>
-    <option fromDef="true" value="USSCRadio" name="name"/>
-    <option fromDef="true" value="USSCRadio" name="caption"/>
-    <option fromDef="true" value="Garret" name="provider"/>
-    <option fromDef="true" value="(C) Garret" name="copyright"/>
-    <option fromDef="true" value="0.0.1" name="version"/>
-    <option fromDef="true" value="" name="version-string"/>
-    <option fromDef="true" value="" name="itunes-artwork"/>
-    <option fromDef="true" value=";&lt;none>;-72;&lt;none>;@2x;&lt;none>;-72@2x;&lt;none>" name="iphone-icon-group"/>
-    <option fromDef="true" value="-Small;&lt;none>;-Small-50;&lt;none>;-Small@2x;&lt;none>;-Small-50@2x;&lt;none>" name="iphone-icon-search-group"/>
-    <option fromDef="true" value="" name="iphone-nosign"/>
-    <option fromDef="true" value="" name="iphone-sign-for-distribution"/>
-    <option fromDef="true" value="" name="iphone-provisioning-profile"/>
-    <option fromDef="true" value="" name="iphone-signing-identity"/>
-    <option fromDef="true" value="English" name="iphone-region"/>
-    <option fromDef="true" value="" name="iphone-info-plist"/>
-    <option fromDef="true" value="" name="iphone-persistent-wifi"/>
-    <option fromDef="true" value="" name="iphone-backgroundmode-audio"/>
-    <option fromDef="true" value="" name="iphone-app-fonts"/>
-    <option fromDef="true" value="" name="iphone-bundle-localisations"/>
-    <option fromDef="true" value="" name="iphone-bundle-url-name"/>
-    <option fromDef="true" value="" name="iphone-bundle-url-schemes"/>
->>>>>>> f1e564ceee45d702778688e62f1d8fb6547cfb99
->>>>>>> fe3ef13fd786b043881ec3f7626b473b4cc5b506
 </config>
