--- a/UCCSRadio/project_USSCRadio/osx (default).config
+++ b/UCCSRadio/project_USSCRadio/osx (default).config
@@ -1,80 +1,14 @@
-<config template="osx (default)" platform="osx">Created: Fri Jun 6 09:33:01 2014&#xd;
-By: lucasgeiken&#xd;
-Using Template: osx (default)&#xd;
-&#xd;
-<<<<<<< HEAD
-&lt;description to go here><option value="" name="osx-icon" fromDef="true"/>
-    <option value="" name="osx-info-plist" fromDef="true"/>
-    <option value="" name="osx-sign-for-store" fromDef="true"/>
-    <option value="10.7" name="osx-minimum-osx-version" fromDef="true"/>
-    <option value="3rd Party Mac Developer Application" name="osx-signing-identity-app" fromDef="true"/>
-    <option value="3rd Party Mac Developer Installer" name="osx-signing-identity-inst" fromDef="true"/>
-    <option value="public.app-category.games" name="osx-appstore-category" fromDef="true"/>
-    <option value="" name="osx-entitlements-plist" fromDef="true"/>
-    <option value="" name="icon" fromDef="true"/>
-    <option value="" name="splashscreen" fromDef="true"/>
-    <option value="" name="splashscreen-use-all" fromDef="true"/>
-    <option value="" name="splashscreen-auto-onblack" fromDef="true"/>
-    <option value="Default" name="assets" fromDef="true"/>
-    <option value="" name="embed-icf" fromDef="true"/>
-    <option value="data/app.icf" name="config" fromDef="true"/>
-    <option value="USSCRadio" name="name" fromDef="true"/>
-    <option value="USSCRadio" name="caption" fromDef="true"/>
-    <option value="Garret" name="provider" fromDef="true"/>
-    <option value="(C) Garret" name="copyright" fromDef="true"/>
-    <option value="0.0.1" name="version" fromDef="true"/>
-    <option value="" name="version-string" fromDef="true"/>
-    <option value="" name="osx-ext-dll" fromDef="true"/>
-    <option value="" name="osx-extra-res" fromDef="true"/>
-=======
-<<<<<<< HEAD
-&lt;description to go here><option name="osx-icon" value="" fromDef="true"/>
-    <option name="osx-info-plist" value="" fromDef="true"/>
-    <option name="osx-sign-for-store" value="" fromDef="true"/>
-    <option name="osx-minimum-osx-version" value="10.7" fromDef="true"/>
-    <option name="osx-signing-identity-app" value="3rd Party Mac Developer Application" fromDef="true"/>
-    <option name="osx-signing-identity-inst" value="3rd Party Mac Developer Installer" fromDef="true"/>
-    <option name="osx-appstore-category" value="public.app-category.games" fromDef="true"/>
-    <option name="osx-entitlements-plist" value="" fromDef="true"/>
-    <option name="icon" value="" fromDef="true"/>
+<config template="" platform=""><option name="icon" value="" fromDef="true"/>
     <option name="splashscreen" value="" fromDef="true"/>
     <option name="splashscreen-use-all" value="" fromDef="true"/>
     <option name="splashscreen-auto-onblack" value="" fromDef="true"/>
     <option name="assets" value="Default" fromDef="true"/>
     <option name="embed-icf" value="" fromDef="true"/>
-    <option name="config" value="data/app.icf" fromDef="true"/>
+    <option name="config" value="" fromDef="true"/>
     <option name="name" value="USSCRadio" fromDef="true"/>
     <option name="caption" value="USSCRadio" fromDef="true"/>
     <option name="provider" value="lucasgeiken" fromDef="true"/>
     <option name="copyright" value="(C) lucasgeiken" fromDef="true"/>
     <option name="version" value="0.0.1" fromDef="true"/>
     <option name="version-string" value="" fromDef="true"/>
-    <option name="osx-ext-dll" value="" fromDef="true"/>
-    <option name="osx-extra-res" value="" fromDef="true"/>
-=======
-&lt;description to go here><option fromDef="true" value="" name="osx-icon"/>
-    <option fromDef="true" value="" name="osx-info-plist"/>
-    <option fromDef="true" value="" name="osx-sign-for-store"/>
-    <option fromDef="true" value="10.7" name="osx-minimum-osx-version"/>
-    <option fromDef="true" value="3rd Party Mac Developer Application" name="osx-signing-identity-app"/>
-    <option fromDef="true" value="3rd Party Mac Developer Installer" name="osx-signing-identity-inst"/>
-    <option fromDef="true" value="public.app-category.games" name="osx-appstore-category"/>
-    <option fromDef="true" value="" name="osx-entitlements-plist"/>
-    <option fromDef="true" value="" name="icon"/>
-    <option fromDef="true" value="" name="splashscreen"/>
-    <option fromDef="true" value="" name="splashscreen-use-all"/>
-    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
-    <option fromDef="true" value="Default" name="assets"/>
-    <option fromDef="true" value="" name="embed-icf"/>
-    <option fromDef="true" value="data/app.icf" name="config"/>
-    <option fromDef="true" value="USSCRadio" name="name"/>
-    <option fromDef="true" value="USSCRadio" name="caption"/>
-    <option fromDef="true" value="Garret" name="provider"/>
-    <option fromDef="true" value="(C) Garret" name="copyright"/>
-    <option fromDef="true" value="0.0.1" name="version"/>
-    <option fromDef="true" value="" name="version-string"/>
-    <option fromDef="true" value="" name="osx-ext-dll"/>
-    <option fromDef="true" value="" name="osx-extra-res"/>
->>>>>>> f1e564ceee45d702778688e62f1d8fb6547cfb99
->>>>>>> fe3ef13fd786b043881ec3f7626b473b4cc5b506
 </config>
