--- a/UCCSRadio/project_USSCRadio/ws81 (default).config
+++ b/UCCSRadio/project_USSCRadio/ws81 (default).config
@@ -1,104 +1,14 @@
-<config template="ws81 (default)" platform="ws81">Created: Fri Jun 6 09:33:01 2014&#xd;
-By: lucasgeiken&#xd;
-Using Template: ws81 (default)&#xd;
-&#xd;
-<<<<<<< HEAD
-&lt;description to go here><option value="" name="ws81-publisher-display-name" fromDef="true"/>
-    <option value="" name="ws81-publisher-id" fromDef="true"/>
-    <option value="" name="ws81-identity-name" fromDef="true"/>
-    <option value="" name="ws81-description" fromDef="true"/>
-    <option value="" name="ws81-product-version" fromDef="true"/>
-    <option value="" name="ws81-product-name" fromDef="true"/>
-    <option value="" name="ws81-custom-manifest" fromDef="true"/>
-    <option value="" name="ws81-custom-manifest-fill" fromDef="true"/>
-    <option value="" name="ws81-logo-image150x150" fromDef="true"/>
-    <option value="" name="ws81-logo-image50x50" fromDef="true"/>
-    <option value="" name="ws81-logo-image30x30" fromDef="true"/>
-    <option value="" name="ws81-splash-screen-image620x300" fromDef="true"/>
-    <option value="" name="icon" fromDef="true"/>
-    <option value="" name="splashscreen" fromDef="true"/>
-    <option value="" name="splashscreen-use-all" fromDef="true"/>
-    <option value="" name="splashscreen-auto-onblack" fromDef="true"/>
-    <option value="Default" name="assets" fromDef="true"/>
-    <option value="" name="embed-icf" fromDef="true"/>
-    <option value="data/app.icf" name="config" fromDef="true"/>
-    <option value="USSCRadio" name="name" fromDef="true"/>
-    <option value="USSCRadio" name="caption" fromDef="true"/>
-    <option value="Garret" name="provider" fromDef="true"/>
-    <option value="(C) Garret" name="copyright" fromDef="true"/>
-    <option value="0.0.1" name="version" fromDef="true"/>
-    <option value="" name="version-string" fromDef="true"/>
-    <option value="" name="ws81-distribution-cer" fromDef="true"/>
-    <option value="" name="ws81-certificate-end-date" fromDef="true"/>
-    <option value="" name="ws81-distribution-pfx" fromDef="true"/>
-    <option value="" name="ws81-distribution-pfx-password" fromDef="true"/>
-    <option value="" name="ws81-ext-capabilities" fromDef="true"/>
-    <option value="" name="ws81-ext-device-capabilities" fromDef="true"/>
-=======
-<<<<<<< HEAD
-&lt;description to go here><option name="ws81-publisher-display-name" value="" fromDef="true"/>
-    <option name="ws81-publisher-id" value="" fromDef="true"/>
-    <option name="ws81-identity-name" value="" fromDef="true"/>
-    <option name="ws81-description" value="" fromDef="true"/>
-    <option name="ws81-product-version" value="" fromDef="true"/>
-    <option name="ws81-product-name" value="" fromDef="true"/>
-    <option name="ws81-custom-manifest" value="" fromDef="true"/>
-    <option name="ws81-custom-manifest-fill" value="" fromDef="true"/>
-    <option name="ws81-logo-image150x150" value="" fromDef="true"/>
-    <option name="ws81-logo-image50x50" value="" fromDef="true"/>
-    <option name="ws81-logo-image30x30" value="" fromDef="true"/>
-    <option name="ws81-splash-screen-image620x300" value="" fromDef="true"/>
-    <option name="icon" value="" fromDef="true"/>
+<config template="" platform=""><option name="icon" value="" fromDef="true"/>
     <option name="splashscreen" value="" fromDef="true"/>
     <option name="splashscreen-use-all" value="" fromDef="true"/>
     <option name="splashscreen-auto-onblack" value="" fromDef="true"/>
     <option name="assets" value="Default" fromDef="true"/>
     <option name="embed-icf" value="" fromDef="true"/>
-    <option name="config" value="data/app.icf" fromDef="true"/>
+    <option name="config" value="" fromDef="true"/>
     <option name="name" value="USSCRadio" fromDef="true"/>
     <option name="caption" value="USSCRadio" fromDef="true"/>
     <option name="provider" value="lucasgeiken" fromDef="true"/>
     <option name="copyright" value="(C) lucasgeiken" fromDef="true"/>
     <option name="version" value="0.0.1" fromDef="true"/>
     <option name="version-string" value="" fromDef="true"/>
-    <option name="ws81-distribution-cer" value="" fromDef="true"/>
-    <option name="ws81-certificate-end-date" value="" fromDef="true"/>
-    <option name="ws81-distribution-pfx" value="" fromDef="true"/>
-    <option name="ws81-distribution-pfx-password" value="" fromDef="true"/>
-    <option name="ws81-ext-capabilities" value="" fromDef="true"/>
-    <option name="ws81-ext-device-capabilities" value="" fromDef="true"/>
-=======
-&lt;description to go here><option fromDef="true" value="" name="ws81-publisher-display-name"/>
-    <option fromDef="true" value="" name="ws81-publisher-id"/>
-    <option fromDef="true" value="" name="ws81-identity-name"/>
-    <option fromDef="true" value="" name="ws81-description"/>
-    <option fromDef="true" value="" name="ws81-product-version"/>
-    <option fromDef="true" value="" name="ws81-product-name"/>
-    <option fromDef="true" value="" name="ws81-custom-manifest"/>
-    <option fromDef="true" value="" name="ws81-custom-manifest-fill"/>
-    <option fromDef="true" value="" name="ws81-logo-image150x150"/>
-    <option fromDef="true" value="" name="ws81-logo-image50x50"/>
-    <option fromDef="true" value="" name="ws81-logo-image30x30"/>
-    <option fromDef="true" value="" name="ws81-splash-screen-image620x300"/>
-    <option fromDef="true" value="" name="icon"/>
-    <option fromDef="true" value="" name="splashscreen"/>
-    <option fromDef="true" value="" name="splashscreen-use-all"/>
-    <option fromDef="true" value="" name="splashscreen-auto-onblack"/>
-    <option fromDef="true" value="Default" name="assets"/>
-    <option fromDef="true" value="" name="embed-icf"/>
-    <option fromDef="true" value="data/app.icf" name="config"/>
-    <option fromDef="true" value="USSCRadio" name="name"/>
-    <option fromDef="true" value="USSCRadio" name="caption"/>
-    <option fromDef="true" value="Garret" name="provider"/>
-    <option fromDef="true" value="(C) Garret" name="copyright"/>
-    <option fromDef="true" value="0.0.1" name="version"/>
-    <option fromDef="true" value="" name="version-string"/>
-    <option fromDef="true" value="" name="ws81-distribution-cer"/>
-    <option fromDef="true" value="" name="ws81-certificate-end-date"/>
-    <option fromDef="true" value="" name="ws81-distribution-pfx"/>
-    <option fromDef="true" value="" name="ws81-distribution-pfx-password"/>
-    <option fromDef="true" value="" name="ws81-ext-capabilities"/>
-    <option fromDef="true" value="" name="ws81-ext-device-capabilities"/>
->>>>>>> f1e564ceee45d702778688e62f1d8fb6547cfb99
->>>>>>> fe3ef13fd786b043881ec3f7626b473b4cc5b506
 </config>
