Swiper no swiping

--- a/UCCSRadio/project_UCCSRadio/project.ini
+++ b/UCCSRadio/project_UCCSRadio/project.ini
@@ -1,9 +1,9 @@
 [General]
-build=x86
+build=arm
 isDebug=true
 isDebugLoader=true
 isRVCT=false
-platform=sim
+platform=android
 
 [android]
 config=android (default)
