Adding facebook and twitter buttons

--- a/UCCSRadio/project_UCCSRadio/project.ini
+++ b/UCCSRadio/project_UCCSRadio/project.ini
@@ -1,9 +1,9 @@
 [General]
-build=arm
+build=x86
 isDebug=true
 isDebugLoader=true
 isRVCT=false
-platform=android
+platform=sim
 
 [android]
 config=android (default)
