misc changes not sure what

--- a/UCCSRadio/project_UCCSRadio/project.ini
+++ b/UCCSRadio/project_UCCSRadio/project.ini
@@ -1,9 +1,9 @@
 [General]
-build=x86
-isDebug=true
-isDebugLoader=true
+build=arm
+isDebug=false
+isDebugLoader=false
 isRVCT=false
-platform=sim
+platform=android
 
 [android]
 config=android (default)
