--- a/UCCSRadio/project_UCCSRadio/project.ini
+++ b/UCCSRadio/project_UCCSRadio/project.ini
@@ -11,3 +11,6 @@ config=android (default)
 [deployDir]
 android=C:\\Users\\Garret\\Documents\\GitHub\\RadioApp\\UCCSRadio\\build_uccsradio_vc12\\deployments\\default\\android\\release\\arm
 sim=C:\\Users\\Garret\\Documents\\GitHub\\RadioApp\\UCCSRadio\\build_uccsradio_vc12\\deployments\\default\\android\\debug\\arm
+
+[deployDir2]
+android=
